# opencc-rust-windows

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci-version.yml  ci.yml
src/: lib.rs
tests/: opencc.rs  static_dictionaries.rs
